syntax = "proto3";

package polykey.v1.agent;

message InfoMessage {
  uint32 pid = 1;
  string node_id = 2;
  string client_host = 3;
  uint32 client_port = 4;
  string proxy_host = 5;
  uint32 proxy_port = 6;
  string agent_host = 9;
  uint32 agent_port = 10;
  string forward_host = 11;
  uint32 forward_port = 12;
  string public_key_jwk = 13;
  string cert_chain_pem = 14;
}
